Fix icon shrink on mobile devices

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -200,7 +200,12 @@ section {
     object-fit: fill;
 } */
 
-
+.table__section tr td:first-child img {
+    min-width: 32px;
+    min-height: 32px;
+    left: 0;
+    object-fit: fill;
+}
 
 .table__section tr td {
     font-size: 2rem;
